--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@shopify/shopify-api": "^11.9.0",
+    "@tremor/react": "^3.18.7",
     "@upstash/redis": "^1.34.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
