--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "graphql": "^16.10.0",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
